<resources>
    <string name="app_name">yelo</string>
    <string name="hello_world">Hello world!</string>
    <string name="sample_text_chat">Lorem Epsum, Lorem epsum.. Lorem
     Lorem Lorem. No epsum. Lorem. Epsum. Lorem. Common Epsum.
     Goat. Hen. Shaun the sheep. Duck tales.</string>
    <string name="action_settings">Settings</string>
    <string name="action_help_and_support">Help</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_closed">drawer_closed</string>
    <string name="enter_mobile_number">Mobile Number</string>
    <string name="first_name">firstname</string>
    <string name="last_name">lastname</string>
    <string name="enter_your_query">enter your query</string>
    <string name="query">Query</string>
    <string name="broadcast">Broadcast</string>
    <string name="cancel">Cancel</string>
    <string name="chat">CHAT</string>
    <string name="cancelCap">CANCEL</string>
    <string name="query_message_hint">enter your query</string>
    <string name="image_profile_pic_description">Profile Picture</string>
    <string name="image_service_pic_description">Service Picture</string>
    <string name="hint_first_name">Name</string>
    <string name="hint_last_name">Last Name(optional)</string>
    <string name="hint_desciption">About Me: My interests and skills</string>
    <string name="hint_service_name">Service Name</string>
    <string name="hint_service_desciption">Tell us something about yourself(140 characters).</string>
    <string name="hint_city">city name</string>
    <string name="enter_code_hint">Enter code received in SMS</string>
    <string name="hint_country">state country</string>
    <string name="hint_address">enter address</string>
    <string name="query_tap_message">Press me to write Query</string>
    <string name="hint_select_tags">Select hashTags. eg. #android</string>
    <string name="create_listing_text">What\'s your</string>
    <string name="create_listing_info">Select by clicking on your interests</string>
    <string name="select_interest_info">You can follow other topics too, that you might be interested in or know a lot about.</string>
    <string name="skipbutton">Skip</string>
    <string name="createbutton">Create</string>
    <string name="finish_button">Finish</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="update">Update</string>
    <string name="title_pick_tags">Select a Tag</string>
    <string name="no_network_message">Please check your network connection</string>
    <string name="add">Add</string>
    <string name="add_tag">Add Tag</string>
    <string name="tag_label">enter the tag</string>
    <string name="submit">Submit</string>
    <string name="new_messages">%d new messages!</string>
    <string name="about_me">About me</string>
    <string name="my_services">My Services</string>
    <string name="contact_number_title">Contact Number</string>
    <string name="description_title">Description</string>
    <string name="ratings_title">Your Testimonial</string>
    <string name="please_ratings_title">Please Rate</string>
    <string name="select_category">Select category</string>
    <string name="category">Category</string>
    <string name="login_guide">login hint to be discussed what to write</string>
    <string name="listing_title">My Avatars</string>
    <string name="budget_title">select your budget</string>
    <string name="preferred_location">Location</string>
    <string name="attach_an_image">Attach an image</string>
    <string name="select_category_toast">Please select the category</string>
    <string name="category_already_created_toast">Category already created. You cannot create
    different listing for same category</string>
    <string name="suggestion">Suggestion</string>
    <string name="bug">Bug</string>
    <string name="hint_feedback">Enter your findings here</string>
    <string name="select_tags">Select tags</string>
    <string name="select_looking_for_toast">Please select an option</string>
    <string name="please_select_tags_message">Please select category for the post</string>
    <string name="please_select_subcategory_message">Please select Subcategory for the post</string>
    <string name="please_write_your_query">Please give the details</string>
    <string name="no_phone_number_message">Post not allowed with a mobile number</string>
    <string name="please_select_location">Please select location</string>
    <string name="address_info">your avatar\'s workplace</string>
    <string name="wall_post">Wall Post</string>
    <string name="update_app">Update App</string>
    <string name="tag_user">Tag User</string>
    <string name="comments">Comments</string>
    <string name="enter_comment">tag user and comment</string>
    <string name="profile_validation_message">Please fill your details</string>
    <string name="profile_image_validation_message">Please upload your profile pic</string>
    <string name="zero_value">0</string>
    <string name="block_user_message">user blocked</string>
    <string name="block">Block</string>
    <string name="your_address">Your Address</string>
    <string name="tag">REFER</string>
    <string name="refer">REFER</string>
    <string name="tag_number">Tag (%s)</string>
    <string name="chat_number">Chat (%s)</string>
    <string name="share">Share</string>
    <string name="edit_skill">Edit Interests</string>
    <string name="share_via">Share via</string>
    <string name="share_via_for_tag">Share via</string>
    <string name="what_are_your">What are your</string>
    <string name="interests">Interests?</string>
    <string name="who_solved_your">Who solved your</string>
    <string name="problem">Problem?</string>
    <string name="select_your_location">Select your location</string>
    <string name="select_your_posts">Search posts</string>
    <string name="select_location">Select Location</string>
    <string name="fetching_message">Fetching data…</string>
    <string name="enter_phone_number">Please enter your phone number</string>
    <string name="enter_country_code">Please enter your country code</string>
    <string name="enter_valid_phone_number">Please enter a valid phone number</string>
    <string name="sms_not_send">Sms could not send</string>
    <string name="retro_error">Network Error</string>
    <string name="api_error">Something went wrong... Please try again later</string>
    <string name="start_chat">START CHAT</string>
    <string name="tag_a_friend">Refer a contact. It\'s free!</string>
    <string name="toast_select_tags">Please select tags</string>
    <string name="toast_select_location">Please select location</string>
    <string name="verify_manually">Verify</string>
    <string name="send_sms">Verify by sms</string>
    <string name="close">CLOSE</string>
    <string name="closed">CLOSED</string>
    <string name="query_update_message">Query Updated</string>
    <string name="select">Select</string>
    <string name="fetching_location">Getting your location…</string>
    <string name="report">Post flagged as abuse</string>
    <string name="please_wait">Please wait…</string>
    <string name="you_may_skip">You may skip</string>
    <string name="you_cannot_tag_on_your_wall">You cannot tag yourself on your post</string>
    <string name="generating_share_link">Building share link…</string>
    <string name="share_message_format" formatted="false">%s\n\nDownload yelo to connect\n\n%s</string>
    <string name="share_tag_message_format" formatted="false">Hey %s!\nI have referred you on yelo for a #%s post\n\n%s</string>
    <string name="share_subject">Check this out</string>
    <string name="share_tag_subject">You got yelo\'d</string>
    <string name="select_post_location">Where do you want to post your query?</string>
    <string name="text_sign_in">Sign In</string>
    <string name="default_description">yelo! I am available here.</string>
    <string name="book">Book</string>
    <string name="book_button_message">By clicking book, a chat message will be sent to the user</string>
    <string name="send_message">Send message</string>
    <string name="get_in_touch_with">Put me in touch\nwith</string>
    <string name="price_rates_info">(Standard SMS rates apply)</string>
    <string name="tag_info_dialog_message">Your newly created tag will be approved shortly. Would you like to continue</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chats_not_available"> No Chats\nStart chats from FEED</string>
    <string name="notifications_not_available"> No New Notifications</string>
    <string name="services_not_available"> No Services</string>
    <string name="no_new_claims"> No New Claims</string>
    <string name="text_save">save</string>
    <string-array name="take_photo_choices">
        <item>Capture from Camera</item>
        <item>Add from Gallery</item>
        <item>Import from FACEBOOK</item>
        <item>Import from GOOGLE</item>

    </string-array>
    <string-array name="take_photo_choices_wall">
        <item>Capture from Camera</item>
        <item>Add from Gallery</item>


    </string-array>
    <string name="broadcast_drag_message">Send A Broadcast Message</string>
    <string name="looking_for">Looking For</string>
    <string name="say_yelo">Just say yelo!</string>
    <string name="looking_for_hiring">Hiring</string>
    <string name="looking_for_advice">Advice</string>
    <string name="looking_for_cofounders">Co-Founders</string>
    <string name="looking_for_freelancers">Freelancers</string>
    <string name="others">Others</string>
    <string name="hey_yelo_message">yelo!</string>
    <string-array name="login_switcher_array">
        <item>Locals</item>
        <item>Trainers</item>
        <item>Entrepreneurs</item>
        <item>Photographers</item>
        <item>Developers</item>
        <item>Designers</item>
        <item>Handy Men</item>
        <item>Dealers</item>
        <item>Agents</item>
        <item>Brokers</item>
        <item>Professionals</item>

    </string-array>
    <string-array name="create_avatar_switcher_array">
        <item>Interest</item>
        <item>Passion</item>
        <item>Talent</item>
        <item>Skill</item>
    </string-array>
    <string-array name="time_spinner">
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
    </string-array>
    <string name="time">Time</string>
    <string-array name="helpmessage_array">
        <item>Post queries to people around you</item>
        <item>Chat directly with people on your post</item>
        <item>Refer your contacts on posts</item>
    </string-array>
    <string-array name="budget_values_rent">
        <item>Select Budget</item>
        <item>upto 6k</item>
        <item>6k - 12k</item>
        <item>12k - 18k</item>
        <item>18k - 24k</item>
        <item>30k +</item>
    </string-array>
    <string name="activate_tag">Go</string>
    <string name="re_enter">Retry verification</string>
    <string name="action_change_location">Change location</string>
    <string name="action_my_walls">My posts</string>
    <string name="action_notifications">Notifications</string>
    <string name="hint_message">Put me in touch with \s</string>
    <string name="add_an_image">Add a photo</string>
    <string name="select_a_category">What does this query concern?(Optional)</string>
    <string name="copyright_string">By using yelo, you agree to the
    &lt;a href="http://www.yelo.red/termsofservice.html">Terms&lt;/a> and &lt;a href="http://www.yelo.red/privacy.html">Privacy Policy&lt;/a></string>
    <string name="menu_title_rewards">Share</string>
    <string name="menu_title_leaders">Leaderboard</string>
    <string name="menu_title_me">My Profile</string>
</resources>