<!--
  ~ /*
  ~  * Copyright (C) 2015 yelo.red
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~  *
  ~  * http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context=".HomeActivity">
    <!-- Group to hide action items when navigation drawer is opened -->

    <group android:id="@+id/group_hide_on_drawer_open">


        <!--<item-->
        <!--android:id="@+id/action_help"-->
        <!--android:title="@string/action_help_and_support"-->
        <!--app:showAsAction="collapseActionView"-->
        <!--android:icon="@drawable/ic_info_outline_white_24dp"-->
        <!--android:orderInCategory="3"-->
        <!--/>-->

        <item
            android:id="@+id/action_settings"
            android:title="@string/action_settings"

            app:showAsAction="collapseActionView"
            android:icon="@drawable/ic_settings_white_24dp"
            android:orderInCategory="5"
            />

        <item
            android:id="@+id/action_notifications"
            android:title="@string/action_notifications"
            app:showAsAction="collapseActionView"
            android:orderInCategory="5"
            />



        <!--<item-->
        <!--android:id="@+id/action_editprofile"-->
        <!--android:orderInCategory="4"-->
        <!--app:showAsAction="collapseActionView"-->
        <!--android:title="@string/action_edit_profile" />-->

        <!--&lt;!&ndash;<item&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/action_editinterest"&ndash;&gt;-->
        <!--&lt;!&ndash;android:orderInCategory="5"&ndash;&gt;-->
        <!--&lt;!&ndash;app:showAsAction="collapseActionView"&ndash;&gt;-->
        <!--&lt;!&ndash;android:title="@string/edit_skill" />&ndash;&gt;-->


        <item
            android:id="@+id/action_location"
            android:title="@string/action_change_location"
            android:orderInCategory="5"/>

        <item
            android:id="@+id/action_mywalls"
            android:orderInCategory="3"
            android:title="@string/action_my_walls"/>
        <item
            android:id="@+id/action_rewards"
            android:orderInCategory="2"
            android:title="@string/menu_title_rewards"/>

        <item
            android:id="@+id/action_leaderboard"
            android:orderInCategory="4"
            android:title="@string/menu_title_leaders"/>

        <item
            android:id="@+id/action_me"
            android:title="@string/menu_title_me"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_action_social_person"
            android:orderInCategory="1" />

    </group>
</menu>
