<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ /*
  ~  * Copyright (C) 2015 yelo.red
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~  *
  ~  * http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/primaryColor"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/Theme.Yelo.OverlayActionBar.Popup"
        app:theme="@style/Theme.Yelo.OverlayActionBar"
        app:titleTextAppearance="@style/ActionBar.TitleTextStyle.Chat"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <red.yelo.widgets.TypefacedTextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_medium"
            android:layout_height="wrap_content"
            android:id="@+id/select_interest_text"
            android:textColor="@color/theme_blue"
            android:text="@string/who_solved_your" />

        <red.yelo.widgets.TypefacedTextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/margin_x_small"
            android:textSize="@dimen/text_xx_large"
            android:layout_height="wrap_content"
            android:text="@string/problem" />

    </LinearLayout>
    <ListView
        android:id="@+id/list_users"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:listSelector="@drawable/selector_click"
        android:cacheColorHint="@color/transparent"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"/>


    <red.yelo.widgets.TypefacedButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_button"
        style="@style/Yelo.Text.Button"
        android:text="@string/close"/>

</LinearLayout>