<?xml version="1.0" encoding="utf-8"?>


<!--
  ~ /*
  ~  * Copyright (C) 2015 yelo.red
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at
  ~  *
  ~  * http://www.apache.org/licenses/LICENSE-2.0
  ~  *
  ~  * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  ~  */
  -->

<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_layout"
        android:background="@color/primaryColor"
        android:minHeight="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_action_navigation_arrow_back"
        app:popupTheme="@style/Theme.Yelo.OverlayActionBar.Popup"
        app:theme="@style/Theme.Yelo.OverlayActionBar"
        app:titleTextAppearance="@style/ActionBar.TitleTextStyle.Chat" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_xx_small"
    app:cardBackgroundColor="@color/postCardBackground"
    app:cardCornerRadius="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_xx_small"
            android:orientation="vertical">
            <red.yelo.widgets.TypefacedEditText
                android:layout_width="match_parent"
                android:id="@+id/message"
                android:layout_height="wrap_content"
                style="@style/Yelo.Text.EditText.Normal"
                android:lines="4"
                android:hint="@string/hint_message" />
            <red.yelo.widgets.TypefacedTextView
                android:layout_marginTop="@dimen/margin_x_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_a_category"
                style="@style/Yelo.Text.Caption.Italic" />


            <red.yelo.widgets.MultiTagLayout
                android:id="@+id/tag_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent" />

            <!--<GridView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/list_suggesstions"
                android:background="@color/transparent"
                android:cacheColorHint="@color/transparent"
                android:gravity="center"
                android:horizontalSpacing="@dimen/margin_xxxx_small"
                android:numColumns="@integer/grid_col_count_tags"
                android:paddingBottom="@dimen/margin_xx_small"
                android:paddingTop="@dimen/margin_xx_small"
                android:verticalSpacing="@dimen/margin_xx_small" />-->

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/wall_image_height"
                android:id="@+id/wall_image"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop" />

            <red.yelo.widgets.TypefacedTextView
                android:id="@+id/text_add_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:drawableLeft="@drawable/ic_image_grey600_18dp"
                android:drawableStart="@drawable/ic_image_grey600_18dp"
                android:background="?android:selectableItemBackground"
                android:layout_marginTop="@dimen/margin_xx_small"
                android:layout_marginBottom="@dimen/margin_xx_small"
                style="@style/Yelo.Text.Menu.Italic"
                android:text="@string/add_an_image" />



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/snow_dark"
                android:layout_marginTop="@dimen/margin_xx_small" />


            <red.yelo.widgets.TypefacedTextView
                android:id="@+id/text_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical|start"
                android:drawableLeft="@drawable/ic_maps_place"
                android:drawableStart="@drawable/ic_maps_place"
                android:drawablePadding="2dp"
                android:text="@string/fetching_location"
                android:background="?android:selectableItemBackground"
                android:layout_marginTop="@dimen/margin_xx_small"
                style="@style/Yelo.Text.Caption" />

            <red.yelo.widgets.TypefacedButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/Yelo.Text.Button.Inverse"
                android:background="@drawable/selector_button_done"
                android:text="@string/update"
                android:id="@+id/post_wall_message" />

        </LinearLayout>

    </ScrollView>

</android.support.v7.widget.CardView>
</LinearLayout>

